# PayPerWrite

./: .gitignore  Anchor.toml  BUILD_STATUS.md  CHANGES.md  Cargo.toml  LICENSE  README.md  VERSION_COMPATIBILITY.md  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
agents/: agent10_qa.md  agent1_smart_contract.md  agent2_access_control.md  agent3_marketplace.md  agent4_security.md  agent5_toolchain.md  agent6_frontend.md  agent7_sdk_tests.md  agent8_economics.md  agent9_docs.md  orchestrator.md
app/nextjs/: README.md  package.json  tsconfig.json
docs/: glossary.md  overview.md
docs/decisions/: 0001-toolchain.md  0002-access-model.md
infra/ci/: validate_specs.sh
infra/scripts/: gen_prompts.sh  setup_toolchain.sh
programs/paywall/: Cargo.toml
programs/paywall/src/: constants.rs  errors.rs  lib.rs
programs/paywall/src/instructions/: create_article.rs  mod.rs  purchase.rs  set_article_price.rs  set_fee_config.rs
programs/paywall/src/state/: mod.rs
programs/paywall/src/utils/: mod.rs
prompts/: agent10_qa.prompt.md  agent1_smart_contract.prompt.md  agent2_access_control.prompt.md  agent3_marketplace.prompt.md  agent4_security.prompt.md  agent5_toolchain.prompt.md  agent6_frontend.prompt.md  agent7_sdk_tests.prompt.md  agent8_economics.prompt.md  agent9_docs.prompt.md  orchestrator.prompt.md
scripts/: build.sh  setup-dev.sh
specs/api/: accounts.md  errors.md  events.md
specs/idl/: paywall.idl.plan.md
specs/runbooks/: e2e_happy_path.md  release_checklist.md
ts/: tsconfig.json
ts/sdk/: transactions.ts
(+13 files in other folders)
